Saved Practice Progress In index.html

--- a/m01/index.html
+++ b/m01/index.html
@@ -1,1 +1,24 @@
+<!DOCTYPE html>
+<html>
 
+<title>Chicken Alfredo</title>
+<h1>Week 1</h1>
+<h2>Chicken Alfredo</h2>
+<h3>Created by Ian Onrust</h3>
+<h4>4/11/25</h4>
+  <hr>
+
+<p>This chicken Alfredo recipe with jar sauce is a quick and easy dinner for those hectic nights,
+or really any night because this stuff is the BOMB!</p>
+
+<ul>
+  <li>1 pound uncooked fettuccine or linguine</li>
+  <li>2 boneless chicken breast halves, cooked and cubed</li>
+  <li>1 (16 ounce) jar Alfredo-style pasta sauce</li>
+  <li>1 (10 ounce) package frozen mixed vegetables</li>
+  <li>1 (4.5 ounce) can sliced mushrooms</li>
+  <li>⅓ cup milk</li>
+</ul>
+  
+
+</html>
