--- a/a1/index.html
+++ b/a1/index.html
@@ -1,1 +1,54 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Artifact #01</title>
+</head>
+<body>
+  <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
+  <hr>
+  <h2>Personal Details</h2>
+    <p>
+      Residential Address: 	123 Dreamland Street, 45987 Moema BRAZIL <br>
+      Mobile: 		+555 666 777 <br>
+      Date of Birth: 		1  April 1980 <br>
+      Nationality: 		Brazilian
+    </p>
+  <h2>Career Objective</h2>
+    <p>
+      To expand skills and experience within the marketing department of an international
+      sports events company or association
+    </p>
+  <h2>Education History</h2>
+    <p>
+      <strong>May 2006 - Current</strong> <br>
+      University of Sao Paulo, Sao Paulo BRAZIL <br>
+      <a href="http//:www.fe.usp.br">University of Sao Paulo</a> <br>
+      Masters in International Marketing <br>
+      Expected graduation: Oct 2007
+    </p>
+    <p>
+      <strong>Jan 2002 - Nov 2005</strong> <br>
+      University of Sao Paulo, Sao Paulo BRAZIL<br>
+      Bachelor of Business in Sports Management
+    </p>
+    <p>
+      <strong>May 1999 - Feb 2001</strong> <br>
+      Augusto Laranja High School, Sao Paulo BRAZIL <br>
+      High School Certificate equivalent
+    </p>
+  <h2>Work Experience</h2>
+    <p></p>
+  <h2>Community Involvement and Recognized Achievements</h2>
+    <p></p>
+  <h2>Other Skills and Certificates</h2>
+    <p></p>
+  <h2>Personal Competencies</h2>
+    <p></p>
+  <h2>Interests and Activities</h2>
+    <p></p>
+  <h2>References</h2>
+    <p></p>
+</body>
+</html>
