--- a/a1/index.html
+++ b/a1/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>CURRICULUM VITAE CLAUDIA MARTINEZ</h1>
+  <img src="https://www.shutterstock.com/image-photo/young-hispanic-business-woman-wearing-600nw-2110414127.jpg" width="300" alt="CURRICULUM VITAE CLAUDIA MARTINEZ" title="CURRICULUM VITAE CLAUDIA MARTINEZ">
   <hr>
   <h2>Personal Details</h2>
     <p>
@@ -23,32 +24,110 @@
   <h2>Education History</h2>
     <p>
       <strong>May 2006 - Current</strong> <br>
-      University of Sao Paulo, Sao Paulo BRAZIL <br>
-      <a href="http//:www.fe.usp.br">University of Sao Paulo</a> <br>
+      <em>University of Sao Paulo, Sao Paulo BRAZIL</em> <br>
+      <a href="http//:www.fe.usp.br" target="_blank">University of Sao Paulo</a> <br>
       Masters in International Marketing <br>
       Expected graduation: Oct 2007
     </p>
     <p>
       <strong>Jan 2002 - Nov 2005</strong> <br>
-      University of Sao Paulo, Sao Paulo BRAZIL<br>
+      <em>University of Sao Paulo, Sao Paulo BRAZIL</em><br>
       Bachelor of Business in Sports Management
     </p>
     <p>
       <strong>May 1999 - Feb 2001</strong> <br>
-      Augusto Laranja High School, Sao Paulo BRAZIL <br>
+      <em>Augusto Laranja High School, Sao Paulo BRAZIL</em> <br>
       High School Certificate equivalent
     </p>
   <h2>Work Experience</h2>
-    <p></p>
+    <p>
+      <strong>Jan 2006 – Current</strong> <br>
+      <em>MOEMA MARKETING, Sao Paulo BRAZIL</em> <br>
+      <a href="http://www.moemamkt.com.br" target="_blank"> Moema Marketing</a> <br>
+      Marketing Trainee – Casual (weekends and holidays)
+    </p>
+  <h3>Responsibilities and Achievements</h3>
+     <ul>
+       <li>Developed marketing and promotional material for sporting events</li>
+       <li>Coordinated in-house events for the annual Moema Sports Marketing Fair including audio visual, entertainment, programming, food and beverage and staffing requirements</li>
+       <li>Attended Regional Conference ‘Sports Marketing in Brazil 2007’</li>
+       <li>Increased readership of the Summer Edition of Moema Sports Magazine by 10% through promotional campaigns</li>
+     </ul>
+    <p>
+      <strong>Jun 2006 – Sep 2006</strong> <br>	
+      <em>THE ART OF MARKETING, Sao Paulo BRAZIL</em> <br>
+      <a href="http://www.artofmarketing.com" target="_blank"> Art of Marketing </a> <br>
+      Internship – 12 weeks full-time
+    </p>
+  <h3>Responsibiliies and Achievements</h3>
+    <ul>
+      <li>Assisted in the preparation of copywriting including press releases, radio and newspaper advertisements</li>
+      <li>Conducted market research into client demographics</li>
+      <li>Coordinated in-house internal marketing promotions such as ‘Employee of the Month’ selection</li>
+      <li>Updated content of The Art of Marketing website</li>
+      <li>Assisted Marketing Manager with general sales and marketing administration tasks</li>
+    </ul>
   <h2>Community Involvement and Recognized Achievements</h2>
-    <p></p>
+    <p>
+      2006:			Selected as President of University Recreation and Sports Representative Council<br>
+      2005/2007:	        Commendation for Academic Excellence – Head of Sports Marketing, SP University<br>
+      2000 – 2006:		Captained Flora Seju Tennis Team<br>
+      2005:			1st place in the Flora Seju Regional Volleyball Championships<br>
+      2003 – 2006:		Chaired the Sao Paolo Sports Ball Coordination Committee<br>
+      2003 – 2007: 		Volunteer – Fundraising for Amnesty International and the 40 Hour Famine
+    </p>
   <h2>Other Skills and Certificates</h2>
-    <p></p>
+    <h3>Computer Skills</h3>
+      <ul>
+        <li>Microsoft XP applications (Word, Excel, Office, PowerPoint, Outlook, Access) – Advanced</li>
+        <li>Microsoft Office Document Imaging and Scanning - Advanced</li>
+        <li>Acrobat Reader 6.0 – Intermediate</li>
+        <li>Fidelio Front Office Systems 6.02 – Beginner</li>
+      </ul>
+    <h3>Language Skills</h3>
+      <ul>
+        <li>Portuguese - Native Tongue)</li>
+        <li>French - Basic (reading and writing skills)</li>
+      </ul>
+    <h3>Other</h3>
+      <ul>
+        <li>St John’s Ambulance Senior First Aid Certificate - 2007</li>
+      </ul>
   <h2>Personal Competencies</h2>
-    <p></p>
+    <p>
+      Ability to work in a fast-paced environment to set deadlines<br>
+      Excellent oral and written correspondence with an exceptional attention to detail<br>
+      Highly organised with a creative flair for project work<br>
+      Enthusiastic self-starter who contributes well to the team
+    </p>
   <h2>Interests and Activities</h2>
-    <p></p>
+    <p>
+      Tennis, volleyball, surfing, pottery, graphic design
+    </p>
   <h2>References</h2>
-    <p></p>
+    <address>
+      Mr Juan Maciel <br>
+      Events Manager <br>
+      Moema Marketing <br>
+      13 Sejuado Road <br>
+      Moema 38280 <br>
+      Sao Paulo BRAZIL<br>
+      Ph:   +555 111 999<br>
+      Fax: +555 111 998<br>
+      Email: juanmaciel@moemamktg.br	
+    </address>
+    <br>
+    <address>
+      Ms Izabela Monteiro <br>
+      Marketing Manager<br>
+      The Art of Marketing<br>
+      98 Bonita Way<br>
+      Moema 38280<br>
+      Sao Paulo BRAZIL<br>
+      Ph: + 555 222 333<br>
+      Fax: +555 222 334<br>
+      Email: izabelam@artofmarketing.com
+    </address>
+  <p><a href="http://validator.w3.org/check?uri=referer" target="_blank"><img src="https://www.w3.org/html/logo/badge/html5-badge-h-css3-semantics.png" width="165" height="64" alt="HTML5" title="HTML5"></a></p>
 </body>
 </html>
