Completed m02 Module Assignment, passing validator

--- a/m02/index.html
+++ b/m02/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>HTML Table Example</title>
+</head>
+<body>
+<table style="border: 1px solid black; border-collapse: collapse;">
+  <tr>
+    <td colspan="3" style="border: 1px solid black; text-align: center;"><h1>HTML Table Example</h1></td>
+  </tr>
+ 
+  <tr>
+    <td style="border: 1px solid black;">
+      <img src="https://dam.thdstatic.com/content/production/4ZdcccQmwg9zRZjGNWs4lA/pc1Xtv8_uKI1azi6jcbg2w/Original%20file/e93859fb-55b2-4ad8-88ae-9ae9c8045f6a_VIATERA-Carbo-kitchen-Mid1.jpeg" 
+           alt="Pretty Kitchen Scene" width="280" height="180">
+    </td>
+    <td style="border: 1px solid black;"><h2>Meal Planner</h2></td>
+    <td style="border: 1px solid black;"><h2>Recipe Index #:</h2></td>
+  </tr>
+ 
+  <tr>
+    <th style="border: 1px solid black;">Week starting</th>
+    <th style="border: 1px solid black;">2/15/2018</th>
+    <th style="border: 1px solid black;">Instructions</th>
+  </tr>
+ 
+  <tr>
+    <td style="border: 1px solid black;"><b>Day of the Week</b></td>
+    <td style="border: 1px solid black;"><b>Recipe Name</b></td>
+    <td rowspan="8" style="border: 1px solid black; vertical-align: top;">Add the name of the recipe under the column Recipe Name</td>
+  </tr>
+  
+  <tr>
+    <td style="border: 1px solid black;">Monday</td>
+    <td style="border: 1px solid black;">Spinach Feta Pizza</td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Tuesday</td>
+    <td style="border: 1px solid black;">My New Recipe</td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Wednesday</td>
+    <td style="border: 1px solid black;"></td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Thursday</td>
+    <td style="border: 1px solid black;"></td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Friday</td>
+    <td style="border: 1px solid black;"></td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Saturday</td>
+    <td style="border: 1px solid black;"></td>
+  </tr>
+  <tr>
+    <td style="border: 1px solid black;">Sunday</td>
+    <td style="border: 1px solid black;"></td>
+  </tr>
+</table>
+</body>
+</html>
 
