--- a/m02/index.html
+++ b/m02/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>HTML Table Example</title>
+  <title>m02 Table Example</title>
 </head>
 <body>
 <table style="border: 1px solid black; border-collapse: collapse;">
