Updated em to i tags

--- a/a1/index.html
+++ b/a1/index.html
@@ -24,25 +24,25 @@
   <h2>Education History</h2>
     <p>
       <strong>May 2006 - Current</strong> <br>
-      <em>University of Sao Paulo, Sao Paulo BRAZIL</em> <br>
+      <i>University of Sao Paulo, Sao Paulo BRAZIL</i> <br>
       <a href="http//:www.fe.usp.br" target="_blank">University of Sao Paulo</a> <br>
       Masters in International Marketing <br>
       Expected graduation: Oct 2007
     </p>
     <p>
       <strong>Jan 2002 - Nov 2005</strong> <br>
-      <em>University of Sao Paulo, Sao Paulo BRAZIL</em><br>
+      <i>University of Sao Paulo, Sao Paulo BRAZIL</i><br>
       Bachelor of Business in Sports Management
     </p>
     <p>
       <strong>May 1999 - Feb 2001</strong> <br>
-      <em>Augusto Laranja High School, Sao Paulo BRAZIL</em> <br>
+      <i>Augusto Laranja High School, Sao Paulo BRAZIL</i> <br>
       High School Certificate equivalent
     </p>
   <h2>Work Experience</h2>
     <p>
       <strong>Jan 2006 – Current</strong> <br>
-      <em>MOEMA MARKETING, Sao Paulo BRAZIL</em> <br>
+      <i>MOEMA MARKETING, Sao Paulo BRAZIL</i> <br>
       <a href="http://www.moemamkt.com.br" target="_blank"> Moema Marketing</a> <br>
       Marketing Trainee – Casual (weekends and holidays)
     </p>
@@ -55,7 +55,7 @@
      </ul>
     <p>
       <strong>Jun 2006 – Sep 2006</strong> <br>	
-      <em>THE ART OF MARKETING, Sao Paulo BRAZIL</em> <br>
+      <i>THE ART OF MARKETING, Sao Paulo BRAZIL</i> <br>
       <a href="http://www.artofmarketing.com" target="_blank"> Art of Marketing </a> <br>
       Internship – 12 weeks full-time
     </p>
