Small Shuffling some head lines to see if that fixes the css not applying

--- a/m04/index.html
+++ b/m04/index.html
@@ -3,9 +3,10 @@
 	<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
-	    <title>m04 Module Assignment</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/dancing" type="text/css">
+	<title>m04 Module Assignment</title>
+	<link rel="stylesheet" media="screen" href="https://fontlibrary.org/en/face/dancing" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
+        
 	</head>
 	<body>
 		<div id="header">
