--- a/m05/index.html
+++ b/m05/index.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>M05 - Bullseye</title>
+    <link rel="stylesheet" href="css/style.css" /> <!-- changed to my css file path -->
+  </head>
+  <body>
+    <section id="page2">
+      <h1>Bullseye</h1>
+      <img src="images/teacher.png" id="teacher2" alt="" />
+      <section id="blackboard"></section>
+    </section>
+    <script src="js/multiplication.js"></script> <!-- changed to my script path -->
+  </body>
+</html>
