Removed trailing slashes where they are not necessary

--- a/m05/index.html
+++ b/m05/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <title>M05 - Bullseye</title>
-    <link rel="stylesheet" href="css/style.css" /> <!-- changed to my css file path -->
+    <link rel="stylesheet" href="css/style.css"> <!-- changed to my css file path -->
   </head>
   <body>
     <section id="page2">
       <h1>Bullseye</h1>
-      <img src="images/teacher.png" id="teacher2" alt="" />
+      <img src="images/teacher.png" id="teacher2" alt="">
       <section id="blackboard"></section>
     </section>
     <script src="js/multiplication.js"></script> <!-- changed to my script path -->
