--- a/m09/index.html
+++ b/m09/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <title>JavaScript &amp; jQuery - Chapter 5: Document Object Model - Add Element</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="A demo page from JavaScript & jQuery Chapter 5 showing how to add DOM elements dynamically." />
+    <title>M09 - Module Assignment</title>
     <link rel="stylesheet" href="css/c05.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div id="page">
       <h1 id="header">List</h1>
       <h2>Buy groceries</h2>
-      <ul id="todo"><li id="one" class="hot"><em>fresh</em> figs</li><li id="two" class="hot">pine nuts</li><li id="three" class="hot">honey</li><li id="four">balsamic vinegar</li></ul>
+
+      <ul id="todo">
+        <li id="one" class="hot"><em>fresh</em> figs</li>
+        <li id="two" class="hot">pine nuts</li>
+        <li id="three" class="hot">honey</li>
+        <li id="four">balsamic vinegar</li>
+      </ul>
+
+      <!-- User input and error message placed below the list -->
+      <input type="text" id="itemInput" placeholder="Enter new item" />
+      <button onclick="addItem()">Add Item</button>
+      <p id="message"></p>
     </div>
     <script src="js/add-element.js"></script>
   </body>
