Implemented html code for m10

--- a/m10/index.html
+++ b/m10/index.html
@@ -1,1 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Draw dots where the user clicks with a button to clear the screen.">
+  <title>M10 - Module Assignment</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+  <p>Click Anywhere...</p>
+  <button>Clear Dots</button>
+  <script src="js/script.js"></script>
+</body>
+</html>
 
