--- a/a5/index.html
+++ b/a5/index.html
@@ -1,1 +1,37 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A5 - Carousel showcasing five images with automatic slideshow functionality.">
+  <title>A5 - Carousel</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <div id="timer">4</div>
+  <h1>Slideshow</h1> 
+
+  <input id="auto" type="checkbox"> Run automatically
+  <br><br> 
+
+  <div class="carousel">
+    <img id="slideshow" src="https://www.imms.org/images/dolphin_presentation/dolphin1.jpg" width="400" height="300" alt="Dolphin jumping playfully in the ocean">
+    <p id="caption">A joyful dolphin leaping above the waves on a sunny day.</p>
+    
+    <div class="controls">
+      <button id="previous">PREVIOUS</button>
+      <button id="next">NEXT</button>
+    </div>
+  </div>
+
+  <footer>
+    <a href="https://validator.w3.org/" target="_blank">
+      <img src="https://www.w3.org/html/logo/badge/html5-badge-h-solo.png" alt="Valid HTML5" height="32"></a>
+    <a href="https://jigsaw.w3.org/css-validator/" target="_blank">
+      <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS" height="32"></a>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
